--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 PORT=8080
 MAX_FILE_SIZE=10485760
 UPLOAD_DIR=./uploads
-DB_PATH="./images.db"
-JWT_SECRET="kasdnfweifnoqwn28934nmso"
-
+URL_CLIENT="http://localhost:4000"
