--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   go-image-service:
     build: .
     restart: unless-stopped
-    # ports:
-    #   - "8080:8080"
+    ports:
+      - "8000:8000"
     env_file:
       - .env
     volumes:
